# receding_horizon_stitcher

./: CMakeLists.txt  package.xml
launch/: stitcher.launch
src/: receding_horizon_stitcher_node.py  straight_line_path_node.py
